# PipeSchrod

./: .gitattributes  .gitignore  API_REFERENCE.md  LICENSE  README.md  pipeschrod_medium_article.html  pipeschrod_medium_article.md  pyproject.toml  requirements.txt  run_lab.bat  setup.py  streamlit_app.py  tutorial.ipynb  verify_trapz.py
dashboard/: How_to_Use_Streamlit_App_for_PipeSchrod.md  streamlit_app.py
docs/: How_to_Use_Streamlit_App_for_PipeSchrod.md
examples/: charmonium_demo.py
pipeschrod/: __init__.py  cli.py  core.py  plotter.py  potentials.py  reporter.py  result.py  solvers.py  steps.py
pipeschrod/dashboard/: How_to_Use_Streamlit_App_for_PipeSchrod.md  __init__.py  streamlit_app.py
