[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeschrod"
version = "1.1.1"
authors = [
  { name="Dr. Yasser Mustafa", email="yasser.mustafan@gmail.com" },
]
description = "Pipe-chained quantum bound-state solver: Matrix, Numerov, FGH, Salpeter"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "rich>=12.0",
    "streamlit>=1.20",
    "pandas>=1.3",
]

[project.urls]
"Homepage" = "https://github.com/Yasser03/pipeschrod"
"Bug Tracker" = "https://github.com/Yasser03/pipeschrod/issues"

[project.scripts]
pipeschrod-lab = "pipeschrod.cli:run_dashboard"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeschrod*"]

[tool.setuptools.package-data]
"pipeschrod.dashboard" = ["*.md"]
